<resources>
  <string name="app_name">DevConYangon2019</string>

  <string name="agenda">My Agenda</string>
  <string name="schedule">Schedule</string>
  <string name="info">More</string>

  <string name="dummy_description">What ends up happening is that lack of planning
            leads to lots of bumps and complications which in
            turn end up destroying their momentum and
            costing them lots of time and resources. In my
            experience, it seems that one of the top reasons
            mobile apps fail is poor planning and lack of strategy.
            The recurring theme throughout this article is the
            following</string>
  <string name="start_page_dummy">start_image</string>
  <string name="start_page_text">Watch the dev 19 recap   and check out dev19 on  social</string>
  <string name="start_page_button">Get started</string>

  <!--  transition name-->
  <string name="transition_title">scheduleTitle</string>
  <string name="transition_location">scheduleLocation</string>
  <string name="transition_type">scheduleType</string>

  <string name="transition_speaker_image">speakerImage</string>
  <string name="transition_speaker_name">speakerName</string>
  <string name="transition_speaker_company">speakerCompany</string>
  <string name="share">share</string>
  <string name="feedback">feedback</string>

  <string name="devcon_notification_channel">Developer Conference 2019</string>
  <string name="devcon_notification_title">DevCon 2019</string>


  <!--  region Error Message-->

  <string name="error_generic">error တက်နေပါသည်။ ခေတ္တစောင့်ပြီး ပြန်စမ်းပေးပါ။</string>
  <string name="error_no_internet">အင်တာနက်ကွန်ယက်ရှာမတွေ့ပါ။​ အင်တာနက်ဖွင့်ပြီး ပြန်စမ်းပေးပါ</string>
  <string name="error_socket_timeout">အင်တာနက်ချိတ်ဆက်မှု မအောင်မြင်ပါ။</string>
  <string name="error_server_500">ဆာဗာ error တက်နေသည်၊ ခေတ္တစောင့်ပြီး ပြန်စမ်းပေးပါ။</string>
  <string name="error_server_404">ဆာဗာ ရှာမတွေ့ပါ။</string>
  <string name="error_http">ဆာဗာ error တက်နေသည်၊ ခေတ္တစောင့်ပြီး ပြန်စမ်းပေးပါ။</string>

  <!--  endregion -->
</resources>
