<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    android:id="@+id/getStartConstraint"
    android:background="@android:color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/start_page_dummy"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/constraint"
        app:layout_constraintDimensionRatio="H,3:2.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.597"
        app:srcCompat="@drawable/getting_start_image" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="H,3:1.7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/raleway_medium"
            android:gravity="center_horizontal"
            android:text="@string/start_page_text"
            android:textColor="#636363"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

<!--        <RelativeLayout-->
<!--            android:id="@+id/relativeLayout"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="@drawable/main_color"-->
<!--            android:layout_marginTop="24dp"-->
<!--            android:elevation="3dp"-->
<!--            android:focusable="true"-->
<!--            android:clickable="true"-->
<!--            android:foreground="?android:attr/selectableItemBackground"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/textView3">-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_centerInParent="true"-->
<!--                android:fontFamily="@font/poppins_semibold"-->
<!--                android:inputType="textCapSentences"-->
<!--                android:text="Getting started"-->
<!--                android:paddingLeft="16dp"-->
<!--                android:paddingTop="8dp"-->
<!--                android:paddingBottom="8dp"-->
<!--                android:paddingRight="16dp"-->
<!--                android:textColor="@android:color/white"-->
<!--                android:textSize="16sp" />-->
<!--        </RelativeLayout>-->
            <Button
                android:id="@+id/startBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:layout_marginTop="16dp"
                android:elevation="3dp"
                android:fontFamily="@font/raleway_bold"
                android:inputType="textCapSentences"
                android:text="@string/start_page_button"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingRight="16dp"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                tools:ignore="TextViewEdits" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>