<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        style="@style/Theme.MaterialComponents.Light.NoActionBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary_main_bg"
        android:fitsSystemWindows="true"
        app:elevation="4dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_main_bg"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/speakerInfoToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary_main_bg"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">


            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_collapseMode="parallax"
            android:orientation="vertical"
            app:layout_collapseParallaxMultiplier="0">
            <ImageView
                android:id="@+id/speakerContentImage"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:transitionName="@string/transition_speaker_image"
                app:srcCompat="@drawable/ic_account_circle" />

            <TextView
                android:id="@+id/speakerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/raleway_medium"
                android:text="Thaw Zin Toe"
                android:transitionName="@string/transition_speaker_name"
                android:layout_gravity="center"
                android:textColor="@color/primary_text_color"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/speakerJob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/raleway"
                android:text="Android Developer"
                android:layout_gravity="center"
                android:textColor="@color/primary_text_color"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/speakerCompany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/raleway"
                android:text="Nexlabs"
                android:transitionName="@string/transition_speaker_company"
                android:layout_gravity="center"
                android:textColor="@color/primary_text_color"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/speakerInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:fontFamily="@font/raleway"
                android:text="@string/dummy_description"
                android:textColor="@color/secondary_text_color"
                android:textSize="15sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="36dp">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/facebookLink"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/linkedinLink"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_facebook" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/linkedinLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_toRightOf="@+id/facebookLink"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/githubLink"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/facebookLink"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_linkedin" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/githubLink"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/linkedinLink"
                    android:tint="@color/primary_icon_color"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/linkedinLink"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_github" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>