<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_main_bg">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        style="@style/Theme.MaterialComponents.Light.DarkActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:background="@color/primary_main_bg"
        app:elevation="4dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_main_bg"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/primary_main_bg"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="">

            <ImageView
                android:id="@+id/demo_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="22dp"
                android:layout_marginEnd="22dp"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:src="@drawable/welcome_splash"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/contentToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary_main_bg"
                android:gravity="top"
                app:elevation="4dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">


            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/contentScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <TextView
                android:id="@+id/scheduleTitle"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="22dp"
                android:layout_marginRight="22dp"
                android:fontFamily="@font/raleway_medium"
                android:text="Keynote for Developer"
                android:textColor="@color/primary_text_color"
                android:transitionName="@string/transition_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/contentTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginLeft="22dp"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/ic_access_time"
                android:drawableLeft="@drawable/ic_access_time"
                android:drawablePadding="16dp"
                android:drawableTint="@color/primary_icon_color"
                android:fontFamily="@font/raleway"
                android:text="Tue, Sat 21,9:00-10:00AM"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scheduleTitle"
                tools:targetApi="m" />

            <TextView
                android:id="@+id/contentLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="16dp"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:drawableStart="@drawable/ic_room"
                android:drawableLeft="@drawable/ic_room"
                android:drawablePadding="16dp"
                android:drawableTint="@color/primary_icon_color"
                android:fontFamily="@font/raleway"
                android:text="Main Hall"
                android:textSize="16sp"
                android:transitionName="@string/transition_location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contentTime"
                tools:targetApi="m" />

            <TextView
                android:id="@+id/contentLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="16dp"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:drawableStart="@drawable/ic_face"
                android:drawableLeft="@drawable/ic_face"
                android:drawablePadding="16dp"
                android:drawableTint="@color/primary_icon_color"
                android:fontFamily="@font/raleway"
                android:text="Beginner"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contentLocation"
                tools:targetApi="m" />

            <TextView
                android:id="@+id/contentDescription"
                android:layout_width="0dp"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="22dp"
                android:fontFamily="@font/raleway"
                android:lineSpacingMultiplier="1.4"
                android:text="@string/dummy_description"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contentLevel" />


            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/raleway_medium"
                android:text="Speaker"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textColor="@color/primary_text_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contentDescription" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/speakerContentInfoRecycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintBottom_toTopOf="@+id/view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView14"
                tools:listitem="@layout/item_speaker">

            </androidx.recyclerview.widget.RecyclerView>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/speakerContentInfoRecycler" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

<!--    <FrameLayout-->
<!--        android:id="@+id/clapCountLayout"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="16dp"-->
<!--        android:alpha="0"-->
<!--        app:layout_anchor="@+id/clapFab"-->
<!--        app:layout_anchorGravity="center|top">-->

<!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            app:elevation="4dp"-->
<!--            style="@style/Widget.MaterialComponents.FloatingActionButton"-->
<!--            app:srcCompat="@drawable/ic_favorite_outline_black_24dp" />-->

<!--        <TextView-->
<!--            android:id="@+id/tvClapCount"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:fontFamily="sans-serif"-->
<!--            android:textColor="@color/darkmode_blue" />-->

<!--    </FrameLayout>-->


    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/contentBottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_gravity="bottom"
        app:buttonGravity="bottom|top"
        app:elevation="10dp"
        app:fabAlignmentMode="end"
        app:fabCradleRoundedCornerRadius="10dp"
        app:fabCradleVerticalOffset="5dp"
        app:hideOnScroll="true"
        app:menu="@menu/schedule_detail_menu" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/clapFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorWhite"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        app:elevation="4dp"
        app:fabSize="normal"
        app:tint="@color/colorAccent"
        app:layout_anchor="@id/contentBottomAppBar"
        app:srcCompat="@drawable/ic_favorite_outline_black_24dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>